--- a/src/components/Preview/preview.css
+++ b/src/components/Preview/preview.css
@@ -11,7 +11,7 @@
   width: 99.89%;
 }
 .preview__heading {
-  padding: 0 0 0 30px;
+  padding: 0 0 10px 30px;
   font-family: tahoma;
   font-weight: bold;
   text-transform: uppercase;
